frontend/test/should_pass/defYield_004.grg
using defYield;

rule t
{
	pp:p(--- yield x);
---
	def x:A;
	
	modify {
		pp(--- yield y);
	---
		def y:A;
	}
}

pattern p(--- def x:A) modify(--- def z:A)
{
	y:B;
---
	yield { yield x = y; }
	
	modify {
		u:B;
	---
		eval { yield z = u; }
	}
}

