frontend/test/should_fail/exec_004.grg
using enum_model_001;

rule r1(x:A) {
  modify{
    exec((y:A)=r1(x));
  }
}

